# knowledge

./: ARCHITECTURE.md  Cargo.toml  README.md  extraction-tench-knowledge.md
.gitea/workflows/: ci.yml
apps/research/src-tauri/: Cargo.toml  tauri.conf.json
apps/research/src-tauri/capabilities/: default.json
apps/research/src-tauri/src/: i18n.rs  lib.rs  main.rs
apps/research/src-tauri/src/commands/: analysis.rs  citation.rs  library.rs  manuscript.rs  mod.rs  pdf.rs  release.rs  search.rs  visual.rs
apps/research/src-tauri/src/ui/: collection_tree.rs  helpers.rs  inspector.rs  mod.rs  paper_list.rs  state.rs
apps/research/src-tauri/src/ui/automation/: inspector.rs  mod.rs  pdf.rs  welcome.rs
apps/research/src-tauri/src/ui/events/: mod.rs  pointer.rs  text.rs
apps/research/src-tauri/src/ui/paint/: center.rs  header.rs  inspector.rs  left.rs  mod.rs  overlays.rs
apps/research/src-tauri/src/ui/state/: builders.rs  init.rs  library.rs  manuscript.rs  pdf.rs  tests.rs  types.rs
apps/research/src-tauri/tests/: annotation_list_row_control_ui_e2e.rs  capture_screenshots.rs  plan_ui_e2e.rs  saved_search_row_control_ui_e2e.rs  smart_collection_row_control_ui_e2e.rs
apps/study/: README.md
apps/study/src-tauri/: Cargo.toml  tauri.conf.json
apps/study/src-tauri/capabilities/: default.json
apps/study/src-tauri/src/: i18n.rs  lib.rs  main.rs  state.rs
apps/study/src-tauri/src/commands/: authoring.rs  catalog.rs  code.rs  curriculum.rs  mod.rs  notes.rs  progress.rs  release.rs  session.rs  validation.rs  visual.rs
apps/study/src-tauri/src/ui/: automation.rs  curriculum.rs  learn.rs  mod.rs  practice.rs  state.rs  tutor.rs  widget.rs
apps/study/src-tauri/src/ui/state/: accessibility.rs  authoring.rs  builders.rs  dashboard.rs  defaults.rs  learning.rs  notes.rs  profile.rs  progress.rs  session.rs  tests.rs  tutor.rs  types.rs  visual.rs
apps/study/src-tauri/src/ui/tutor/: authoring.rs  goals.rs  layout.rs  panel.rs  profile.rs  session.rs  shortcuts.rs
apps/study/src-tauri/tests/: authoring_body_field_ui_e2e.rs  authoring_title_field_ui_e2e.rs  automatic_focus_indicator_ui_e2e.rs  automatic_high_contrast_styling_ui_e2e.rs  automatic_session_auto_save_ui_e2e.rs  capture_screenshots.rs  learn_review_concept_button_ui_e2e.rs  new_concept_authoring_button_ui_e2e.rs  new_curriculum_authoring_button_ui_e2e.rs  new_unit_authoring_button_ui_e2e.rs  plan_ui_e2e.rs  review_swipe_hard_action_ui_e2e.rs  save_draft_authoring_button_ui_e2e.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/job-core/: Cargo.toml
crates/job-core/src/: lib.rs
crates/research-core/: Cargo.toml
crates/research-core/src/: ai.rs  citation.rs  domain.rs  exchange.rs  indexing.rs  lib.rs  library.rs  manuscript.rs  pdf.rs  release.rs  storage.rs  tests.rs  visual.rs
crates/research-core/src/exchange/: jobs.rs  pdf_import.rs  tests.rs  text.rs  types.rs
crates/research-core/src/exchange/text/: export.rs
crates/research-core/src/indexing/: benchmark.rs  document_ids.rs  documents.rs  query.rs  search.rs  tests.rs  types.rs
crates/research-core/src/manuscript/: assets.rs  checks.rs  citations.rs  document.rs  editing.rs  export.rs  output.rs  skeleton.rs  target.rs  tests.rs  types.rs
crates/research-core/src/pdf/: extract.rs  render.rs  search.rs  tests.rs
crates/research-core/src/storage/: attachments.rs  backup.rs  error.rs  file_io.rs  layout.rs  migration.rs  policy.rs  recent.rs
crates/research-core/src/visual/: ai.rs  draw.rs  library.rs  manual.rs  manuscript.rs  references.rs  table.rs  tests.rs  types.rs
crates/research-core/tests/: format_roundtrip.rs  public_api.rs
crates/search-core/: Cargo.toml
crates/search-core/src/: lib.rs
crates/study-core/: Cargo.toml
crates/study-core/src/: ai.rs  authoring.rs  builtin.rs  curriculum.rs  exchange.rs  glossary.rs  indexing.rs  learning.rs  lib.rs  locale.rs  notes.rs  pack.rs  programming.rs  release.rs  review.rs  storage.rs  subjects.rs  visual.rs
crates/study-core/src/authoring/: draft.rs  preview.rs  tests.rs  types.rs  validation.rs
crates/study-core/src/notes/: anki.rs  reports.rs  tests.rs  types.rs
crates/study-core/src/programming/: tests.rs
crates/study-core/tests/: public_api.rs
plans/: 2026-05-06-research-ui-user-perspective-review.md  2026-05-06-study-ui-user-perspective-review.md  2026-05-08-research-implement-plan-audit-v1.md  2026-05-08-study-implement-audit-1.md  2026-05-27-tench-knowledge-extraction-1.0.md
plans/background/research/: automatic-advanced-search-panel-render-behavior.md  automatic-annotation-list-render-behavior.md  (+20 more)
plans/ui/: research_report.txt  study_report.txt
tools/architecture-guard/: line_budget_baseline.txt
tools/workspace-guard/: Cargo.toml  main.rs
(+670 files in other folders)
