[package]
name = "tench-research"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tench Research desktop app"

[lib]
name = "tench_research_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tench-app-core.workspace = true
tench-job-core.workspace = true
tench-research-core.workspace = true
tench-search-core.workspace = true
tench-ui = { workspace = true, features = ["tauri"] }

[dev-dependencies]
image.workspace = true
tench-ui-automation-core.workspace = true
tench-ui-test.workspace = true
