[package]
name = "tench-study"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tench Study desktop app"

[lib]
name = "tench_study_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tench-app-core.workspace = true
tench-search-core.workspace = true
tench-study-core.workspace = true
tench-ui = { workspace = true, features = ["tauri"] }

[dev-dependencies]
image.workspace = true
tench-ui-automation-core.workspace = true
tench-ui-test.workspace = true
